<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3D1D4"
    tools:context=".InfoScreen.InfoScreenActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


       <!-- actually have to add video player below-->
        <ImageView
            android:id="@+id/img_innerThumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/hatter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/play"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/img_innerThumbnail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/img_innerThumbnail" />

        <ImageView
            android:id="@+id/img_backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="22dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_heart_icon"
            app:layout_constraintBottom_toBottomOf="@+id/img_innerThumbnail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_innerThumbnail"
            tools:ignore="ContentDescription,RelativeOverlap,ImageContrastCheck,SpeakableTextPresentCheck" />


        <TextView
            android:id="@+id/tv_movieName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:layout_margin="5dp"
            android:text="@string/the_tomorrow_war"
            android:textColor="#4B0878"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/cv_md"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_innerThumbnail" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_md"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="3dp"
            app:cardMaxElevation="4dp"
            app:layout_constraintBottom_toTopOf="@id/cv_moviePara"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_movieName">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_circleImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                android:padding="15dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circleImageView"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/hatter"
                    app:civ_border_color="#EC367C"
                    app:civ_border_width="1dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/ll_rDateNRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/circleImageView"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="1dp"
                        android:drawableStart="@drawable/ic_baseline_star_rate_24"
                        android:drawablePadding="6dp"
                        android:text="@string/_7_8"
                        android:textColor="#4B0878"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="UseCompatTextViewDrawableXml" />

                    <TextView
                        android:id="@+id/tv_releaseDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/release_date"
                        android:textColor="#4B0878"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_Date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/_03_sept_2021"
                        android:textColor="#757575"
                        android:textSize="16sp"
                        android:textStyle="italic" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_moviePara"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cv_md"
            android:layout_margin="10dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="3dp"
            app:cardMaxElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_md">

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="15dp"
                android:text="@string/movie_para"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="italic" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_arrow_back_24"
            android:text="@string/reviews"
            android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
            android:drawablePadding="8dp"
            android:layout_marginTop="7dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            tools:ignore="UseCompatTextViewDrawableXml"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_moviePara"
            app:layout_constraintBottom_toTopOf="@id/tv_reviews_para"/>
        <TextView
            android:id="@+id/tv_reviews_para"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:layout_margin="10dp"
            android:textSize="16sp"
            android:layout_marginTop="7dp"
            android:text="@string/movie_para_2"
            android:padding="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_reviews"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>